@@ -1,20 +1,21 @@
 Package: fExoticOptions
-Version: 2152.78
-Revision: 5392
-Date: 2012-11-07
-Title: Exotic Option Valuation
-Author: Diethelm Wuertz and many others, see the SOURCE file
-Depends: R (>= 2.4.0), methods, timeDate, timeSeries, fBasics, fOptions
+Title: Rmetrics - Pricing and Evaluating Exotic Option
+Date: 2017-11-12
+Version: 3042.80
+Author: Diethelm Wuertz [aut],
+	Tobias Setz [cre]
+Maintainer: Tobias Setz <tobias.setz@live.com>
+Description: Provides a collection of functions to evaluate
+	barrier options, Asian options, binary options, currency 
+    translated options, lookback options, multiple asset options
+	and multiple exercise options.
+Depends: R (>= 2.15.1), timeDate, timeSeries, fBasics, fOptions
+Imports: methods
 Suggests: RUnit
-Maintainer: Yohan Chalabi <yohan.chalabi@rmetrics.org>
-Description: Environment for teaching "Financial Engineering and
-        Computational Finance"
-NOTE: SEVERAL PARTS ARE STILL PRELIMINARY AND MAY BE CHANGED IN THE
-        FUTURE. THIS TYPICALLY INCLUDES FUNCTION AND ARGUMENT NAMES, AS
-        WELL AS DEFAULTS FOR ARGUMENTS AND RETURN VALUES.
 LazyData: yes
 License: GPL (>= 2)
 URL: http://www.rmetrics.org
-Packaged: 2012-11-07 10:33:28 UTC; yankee
+NeedsCompilation: no
+Packaged: 2017-11-17 06:21:12 UTC; Tobias Setz
 Repository: CRAN
-Date/Publication: 2012-11-07 12:32:22
+Date/Publication: 2017-11-17 08:37:45 UTC
