@@ -1,14 +1,14 @@
-afaef1d3eb6bb30d55dfeaa89f3dd598 *ChangeLog
-78300dc58dae0adebd6daaa6daf8ce8c *DESCRIPTION
-eec425de7ee1ecd5751635911901df14 *NAMESPACE
-84df7901d9c14d6372b8a9aed76aedfe *R/AsianOptions.R
-4c917d3583ac89f721cdb9ee5d477672 *R/BarrierOptions.R
-865b9da5e21426df26f817c66668f974 *R/BinaryOptions.R
-3763e88ab5808edaca8a329698ac71c2 *R/CurrencyTranslatedOptions.R
-455f54913ec449a83bca5f47dc271040 *R/LookbackOptions.R
-73be05ee8f9573719159f8fb1ca9b431 *R/MultipleAssetsOptions.R
-9b1ce3e93a2091800fdf5687d6bd1d36 *R/MultipleExercisesOptions.R
-0509a6640973dba129c5b6737d349ea6 *R/zzz.R
+54e54ea458dc354636fa38d33cd4dbf2 *ChangeLog
+115a4935cfb165a6006e214437537c6e *DESCRIPTION
+80ffa69fe5d3e980d17d078e7913c0a2 *NAMESPACE
+7b55d49b1967b455d4e17d8e45cef0cd *R/AsianOptions.R
+269864eb5b217bb46760b9ff45c30d0b *R/BarrierOptions.R
+406ad4840a5e22083d8aac179fca2f96 *R/BinaryOptions.R
+de7f3b9faf9eaffa40a968b5c3aae790 *R/CurrencyTranslatedOptions.R
+2158a6e0f131141f2095e885a5ae37ff *R/LookbackOptions.R
+141e7aa562e5a05f12463227441d1b0e *R/MultipleAssetsOptions.R
+229a963b95af17182c6de46088f84d54 *R/MultipleExercisesOptions.R
+bcb8a9ea7b73ae5d5609f34b4cf23a36 *R/zzz.R
 6042b9c5e5bec3ecc1b6959cd2858b64 *inst/COPYRIGHT.html
 e3426432ec17e71a562e7c2fb6ad3952 *inst/unitTests/Makefile
 832ba294e302210649e3583353d42aad *inst/unitTests/runTests.R
@@ -19,7 +19,7 @@ e715e6e485a70ba05a56370e09ace638 *inst/unitTests/runit.CurrencyTranslatedOptions
 b5d8c8ea68f7144bfbcdbe3ea30cc7bc *inst/unitTests/runit.LookbackOptions.R
 34c833f2ad04cfe5b52b0353e854dbd0 *inst/unitTests/runit.MultipleAssetsOptions.R
 eeaeaa1dc8d9c335570b9fc41bef9565 *inst/unitTests/runit.MultipleExercisesOptions.R
-2dcf5eaacab5780e87cafdff9f1ca62e *man/AsianOptions.Rd
+896dc4c9f474490743316a6049376112 *man/AsianOptions.Rd
 2695f9a435902f8f6abd4f449fda3d4d *man/BarrierOptions.Rd
 80f720f1708bc3d278a04a78aafe1dd5 *man/BinaryOptions.Rd
 216d6c1361f7030096a1c30d65ec45b1 *man/CurrencyTranslatedOptions.Rd
